--- a/image-1/Dockerfile
+++ b/image-1/Dockerfile
@@ -2,4 +2,5 @@ FROM ubuntu:latest
 COPY run.sh /run.sh
 RUN /bin/bash -c "chmod +x /run.sh"
 ENV MY_NAME="John Jacob Jingleheimer Schmidt"
+CMD /bin/bash -c "./run.sh" sorry."
 CMD /bin/bash -c "./run.sh"
