--- a/image-2/Dockerfile
+++ b/image-2/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:latest
 COPY run.sh /run.sh
 RUN /bin/bash -c "chmod +x /run.sh"
+ENV MY_NAME="John Jacob Jingleheimer Schmidt"
 CMD /bin/bash -c "./run.sh"
