--- a/image-2/Dockerfile
+++ b/image-2/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:latest
 COPY run.sh /run.sh
 RUN /bin/bash -c "chmod +x /run.sh"
-ENV MY_NAME="John Jacob Jingleheimer Schmidt"
+ENV MY_NAME="Wes Ladd"
 CMD /bin/bash -c "./run.sh"
