--- a/image-2/Dockerfile
+++ b/image-2/Dockerfile
@@ -2,4 +2,4 @@ FROM ubuntu:latest
 COPY run.sh /run.sh
 RUN /bin/bash -c "chmod +x /run.sh"
 ENV MY_NAME="Wes Ladd"
-CMD /bin/bash -c "./run.sh""
+CMD /bin/bash -c "./run.sh"
