updates to base image source

--- a/image-2/Dockerfile
+++ b/image-2/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM public.ecr.aws/q2o3v5f0/ubuntu:latest
 COPY run.sh /run.sh
 RUN /bin/bash -c "chmod +x /run.sh"
 ENV MY_NAME="Wes Ladd"
